# Coursewor_parsing

./: pyproject.toml
main/: main.py
utils/: connector.py  engine_classes.py  jobs_classes.py
