[tool.poetry]
name = "coursewor-parsing"
version = "0.1.0"
description = ""
authors = ["GeorgijP <georgij.puzanov@inbox.ru>"]
readme = "README.md"
packages = [{include = "coursewor_parsing"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
